--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <div class="clearfix">
     <div class="btn-group custom-btn-group float-right" role="group">
       <a href="/warehouse/download-load-sheet/<%=manifest.mid%>" type="button" class="btn btn-primary btn-sm "> <i
@@ -9,4 +9,136 @@
         Send Flight</button>
     </div>
   </div>
+</div> -->
+
+<% layout('./shared/__template')%>
+
+<div class='gutters'>
+  <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
+    <div class='card'>
+      <div class="card-header">
+        <h4 class="card-title"><%=title%></h4>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title text-muted">Plane</h3>
+        <div class='row'>
+          <div class='col-md-9'>
+            <input type='hidden' id="pgmode" value='flight' />
+            <div class="form-group form-show-validation row">
+              <label for="tail_number" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Plane</label>
+              <div class="col-lg-8 col-md-8 col-sm-8">
+                <input type='text' class='form-control' id='tail_number' placeholder="Plane"
+                  value="<%= plane.tail_number %>" readonly />
+              </div>
+            </div>
+            <div class="form-group form-show-validation row">
+              <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">AirCraft Type</label>
+              <div class="col-lg-8 col-md-8 col-sm-8">
+                <input type='text' class='form-control' id='aircraft_type' placeholder="AirCraft Type"
+                  value="<%= plane.aircraft_type %>" readonly />
+              </div>
+            </div>
+            <div class="form-group form-show-validation row">
+              <label for="shipDate" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Flight Date / Time </label>
+              <div class="col-lg-8 col-md-9 col-sm-8 d-flex">
+                <input type="text" class="form-control" id="shipDate" value="<%= manifest.shipDate %>" readonly>
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i class="fa fa-calendar-check"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="separator-solid"></div>
+        <div class="d-flex">
+          <h3 class="card-title text-muted package-info">Data Entry ( Weight : 0 lbs / 0lbs )</h3>
+        </div>
+        <div class='row mt-3'>
+          <div class='col-md-12 table-responsive'>
+            <table id='packageTable' class='display table table-striped table-hover w-100'>
+              <thead>
+                <tr>
+                  <td><strong>Compartment</strong></td>
+                  <td><strong>Trackig No #</strong></td>
+                  <td><strong>Description</strong></td>
+                  <td><strong>Weight</strong></td>
+                  <td><strong>Dimension</strong></td>
+                </tr>
+              </thead>
+              <tbody>
+                <% packages.forEach(package => { %>
+                <tr data-record="<%= package.id %>">
+                  <td><%= package.compartment.name %></td>
+                  <td><%= package.trackingNo %></td>
+                  <td><%= package.description %></td>
+                  <td><%= package.weight %> lbs</td>
+                  <td><%= package.dimensions %></td>
+                </tr>
+                <% }) %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="card-action">
+        <a id='btn-send' data-target="#shipManifest" data-toggle='modal' data-id="<%= manifest.id %>"
+          class='btn btn-round btn-primary ml-md-auto float-right text-white btn-send'>Send Flight</a>
+      </div>
+    </div>
+  </div>
 </div>
+
+<div class="modal fade" id="shipManifest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+  aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Send Flight</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h3>Are you sure?</h3>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success ship-manifest" id='ship-manifest1'>Send Flight</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="broker" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true"
+  style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Send to Broker (Manifest )</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <label for="broker-name">Broker Name</label>
+        <input type='text' id='broker-name' class='form-control broker-email' value=''>
+
+        <label for="broker-email">Broker Email</label>
+        <input type='text' id='broker-email' class='form-control broker-email' value=''>
+      </div>
+      <div class="modal-footer">
+
+        <span class='text-left' id='eb-message'></span>
+        <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+
+        <button type="button" class="btn btn-success email-broker" id='email-broker'>Send <i id='eb-icon'
+            class='icon-plane'></i></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
+<% block('scripts').append('<script src="/js/warehouse/manifest/preview.js"></script>')%>
