Driver CRUD, Delivery Updated

--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -54,5 +54,5 @@
   </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.2.0/sweetalert2.all.min.js"></script>
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/admin/user/list.js"></script>')%>
