--- a/views/pages/fleet/driver/edit.ejs
+++ b/views/pages/fleet/driver/edit.ejs
@@ -3,20 +3,22 @@
   <div class="card-header">
     <div class="card-title"><%=title%></div>
   </div>
-  <form id="add-driver-form" action="create">
+  <form id="add-driver-form" action="update">
     <div class="card-body">
       <div class="form-group form-show-validation row">
         <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name <span
             class="required-label">*</span></label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required>
+          <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name"
+            value="<%= driver.firstName %>" required>
         </div>
       </div>
       <div class="form-group form-show-validation row">
         <label for="lastName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name <span
             class="required-label">*</span></label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Second Name" required>
+          <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Second Name"
+            value="<%= driver.lastName %>" required>
         </div>
       </div>
       <div class="form-group form-show-validation row">
@@ -27,8 +29,8 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="username-addon">@</span>
             </div>
-            <input type="number" class="form-control" placeholder="Mobile Number" aria-label="mobile"
-              aria-describedby="username-addon" id="mobile" name="mobile" required>
+            <input type="number" class="form-control" placeholder="Mobile Number" id="mobile" name="mobile"
+              value="<%= driver.mobile %>" required>
           </div>
         </div>
       </div>
@@ -36,7 +38,8 @@
         <label for="email" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Email Address <span
             class="required-label">*</span></label>
         <div class="col-lg-4 col-md-9 col-sm-8">
-          <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
+          <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com"
+            value="<%= driver.email %>" required>
         </div>
       </div>
       <!-- <div class="separator-solid"></div>
@@ -66,4 +69,4 @@
 </div>
 
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
-<% block('scripts').append('<script src="/js/fleet/driver/create.js"></script>')%>
+<% block('scripts').append('<script src="/js/fleet/driver/edit.js"></script>')%>
