--- a/views/pages/admin/customers/list.ejs
+++ b/views/pages/admin/customers/list.ejs
@@ -15,7 +15,7 @@
                 <th>PMB</th>
                 <th>Name</th>
                 <th>Email</th>
-                <th>Mobile</th>
+                <th>Telephone</th>
                 <th>Location</th>
                 <th>Action</th>
               </tr>
@@ -27,7 +27,7 @@
                 <td scope="row"><%=customer.pmb%></td>
                 <td><%=customer.firstName + ' ' + customer.lastName%></td>
                 <td><%=customer.email%></td>
-                <td><%=customer.mobile %></td>
+                <td><%=customer.telephone %></td>
                 <td><%=customer.location %></td>
                 <td>
                   <a href='manage/<%=customer.id%>/get'><i class="fas fa-user-edit"></i></a>
