--- a/views/pages/admin/customers/edit.ejs
+++ b/views/pages/admin/customers/edit.ejs
@@ -41,10 +41,10 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="mobile" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile</label>
+            <label for="telephone" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Mobile</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="(242)-xxx-xxxx"
-                value="<%=customer.mobile%>">
+              <input type="tel" class="form-control" id="telephone" name="telephone" placeholder="(242)-xxx-xxxx"
+                value="<%=customer.telephone%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
