--- a/views/pages/fleet/driver/create.ejs
+++ b/views/pages/fleet/driver/create.ejs
@@ -39,6 +39,16 @@
           <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" required>
         </div>
       </div>
+      <div class="form-group form-show-validation row">
+        <label for="location" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Location </label>
+        <div class="col-lg-4 col-md-9 col-sm-8">
+          <select class="form-control" id="location" name="location" required>
+            <option></option>
+            <option value="fll">Warehouse FLL</option>
+            <option value="nas">Warehouse NAS</option>
+          </select>
+        </div>
+      </div>
       <!-- <div class="separator-solid"></div>
       <div class="form-group form-show-validation row">
         <label class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Upload License <span
