--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -25,11 +25,19 @@
             <% deliveries.forEach(delivery => { %>
             <tr data-record="<%= delivery.id %>">
               <td><%= delivery.createdBy %></td>
-              <td><%= delivery.deliveryDate %></td>
+              <td><%= delivery.delivery_date %></td>
               <td><%= delivery.location.name %></td>
               <td><%= delivery.packages.length %></td>
-              <td><%= delivery.driver.name %></td>
-              <td><%= delivery.vehicle.name %></td>
+              <td><%= delivery.driver.firstName + ' ' + delivery.driver.lastName %></td>
+              <td>
+                <%= delivery.vehicle.vehicle_make + '-' + delivery.vehicle.model + '-' + delivery.vehicle.registration %>
+              </td>
+              <td class="text-center">
+                <a href='manage/<%=delivery.id%>/get' class="btn btn-link btn-primary px-2" data-toggle="tooltip"
+                  data-original-title="Delivery Packages"> <i class="fa fa-box-open"></i> </a>
+                <a class="btn btn-link btn-primary btn-close-delivery px-2" data-toggle="modal"
+                  data-id="<%=delivery.id%>" data-target="#close-delivery"> <i class="fa fa-check-circle"></i> </a>
+              </td>
             </tr>
             <% }) %>
           </tbody>
@@ -43,7 +51,7 @@
   aria-hidden="true" style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <form>
+      <form class="delivery-form">
         <div class="modal-header">
           <h2 class="modal-title" id="exampleModalLabel2">Create New Delivery</h2>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -53,7 +61,7 @@
         <div class="modal-body">
           <div class='form-group'>
             <label for="locationId">Select Delivery Location</label>
-            <select class='form-control' id='locationId' name="locationId">
+            <select class='form-control' id='locationId' name="locationId" required>
               <option></option>
               <% locations.forEach(location => { %>
               <option value='<%=location.id%>'><%=location.name%></option>
@@ -62,20 +70,32 @@
           </div>
           <div class='form-group'>
             <label for="driverId">Select Driver</label>
-            <select class='form-control' id="driverId" name="driverId">
-              <option>Select Driver</option>
+            <select class='form-control' id="driverId" name="driverId" required>
+              <option></option>
+              <% drivers.forEach(driver => { %>
+              <option value='<%=driver.id%>'><%=driver.firstName + ' ' + driver.lastName %></option>
+              <% }) %>
             </select>
           </div>
           <div class='form-group'>
             <label for="vehicleId">Select Vehicle</label>
-            <select class='form-control' id="vehicleId" name="vehicleId">
-              <option>Select Vehicle</option>
+            <select class='form-control' id="vehicleId" name="vehicleId" required>
+              <option></option>
+              <% vehicles.forEach(vehicle => { %>
+              <option value='<%=vehicle.id%>'>
+                <%= vehicle.vehicle_make + ' ' + vehicle.model + ' ' + vehicle.registration %>
+              </option>
+              <% }) %>
             </select>
+          </div>
+          <div class='form-group'>
+            <label for="delivery_date">Delivery Date</label>
+            <input class="form-control" type="text" id="delivery_date" name="delivery_date" required>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger close-modal" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary save-delivery" id='rmPackage'>Save</button>
+          <input type="submit" class="btn btn-primary save-delivery" value="Create" />
         </div>
       </form>
     </div>
@@ -98,8 +118,8 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary close-modal" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-info save-delivery" id='rmPackage'>Close Delivery</button>
+        <button type="button" class="btn btn-danger close-modal" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary close-delivery">Close Delivery</button>
       </div>
     </div>
   </div>
