--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -162,26 +162,15 @@
 					<div class="collapse" id="stores">
 						<ul class="nav nav-collapse">
 							<li>
-								<a href="/warehouse/store-packages">
+								<a href="/store/store-packages">
 									<span class="sub-item">Package On Hand</span>
 								</a>
 							</li>
-							<!-- <li>
-							<a href="#">
-								<span class="sub-item">Checkout</span>
-							</a>
-						</li> -->
 							<li>
-								<a href="/warehouse/store-check-in">
+								<a href="/store/store-check-in">
 									<span class="sub-item">Check In Package</span>
 								</a>
 							</li>
-
-							<!-- <li>
-							<a href="/users/add-locations">
-								<span class="sub-item">Add</span>
-							</a>
-						</li> -->
 						</ul>
 					</div>
 				</li>
