Process Package Removed

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -161,14 +161,14 @@
 					</a>
 					<div class="collapse" id="stores">
 						<ul class="nav nav-collapse">
-							<li>
+							<!-- <li>
 								<a href="/store/store-packages">
 									<span class="sub-item">Package On Hand</span>
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="/store/store-check-in">
-									<span class="sub-item">Check In Package</span>
+									<span class="sub-item">Package On Hand</span>
 								</a>
 							</li>
 						</ul>
