--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -78,7 +78,7 @@
 				<%if (user.role.includes('Admin') || user.role.includes("Warehouse Fl")) {%>
 				<li class="nav-item <% if (page.includes('/fll/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#warehouse-fll">
-						<i class="fas fa-warehouse"></i>
+						<i class="fas fa-building"></i>
 						<p>Warehouse FLL</p>
 						<span class="caret"></span>
 					</a>
@@ -195,10 +195,6 @@
 									<span class="sub-item">Vehicles</span>
 								</a>
 							</li>
-							<li class="nav-item">
-								<hr class="border-top m-0">
-							</li>
-							<div class="separator-solid"></div>
 							<li <% if (page.includes('/fleet/pilot/')) { %> class="active" <% } %>>
 								<a href="/fleet/pilot/list">
 									<span class="sub-item">Pilots</span>
