--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -11,42 +11,42 @@
           <table id="shipperTable" class="display table table-striped table-hover">
             <thead>
               <tr>
-                <th>ID</th>
+                <!-- <th>ID</th> -->
                 <th>Name</th>
                 <th>Contact Name</th>
                 <th>Email</th>
                 <th>Mobile</th>
-                <th>Fax</th>
+                <!-- <th>Fax</th> -->
                 <th>Address</th>
-                <th>State</th>
-                <th>Country</th>
-                <th>ZipCode</th>
+                <!-- <th>State</th> -->
+                <!-- <th>Country</th> -->
+                <!-- <th>ZipCode</th> -->
                 <th>AccountNo</th>
-                <th>Type</th>
-                <th>External</th>
-                <th>Tran Version</th>
-                <th>Departure Port</th>
+                <!-- <th>Type</th> -->
+                <!-- <th>External</th> -->
+                <!-- <th>Tran Version</th> -->
+                <!-- <th>Departure Port</th> -->
                 <th>Action</th>
               </tr>
             </thead>
             <tbody>
               <% shippers.forEach(function(shipper){%>
               <tr data-record="<%= shipper.id %>">
-                <td><%=shipper.id%></td>
-                <td><%=shipper.name%></td>
+                <!-- <td><%=shipper.id%></td> -->
+                <td><strong><%=shipper.name%></strong></td>
                 <td><%=shipper.firstName + ' ' + shipper.lastName%></td>
                 <td><%=shipper.email%></td>
                 <td><%=shipper.telephone %></td>
-                <td><%=shipper.fax %></td>
+                <!-- <td><%=shipper.fax %></td> -->
                 <td><%=shipper.address %></td>
-                <td><%=shipper.state %></td>
-                <td><%=shipper.country %></td>
-                <td><%=shipper.zipcode %></td>
+                <!-- <td><%=shipper.state %></td> -->
+                <!-- <td><%=shipper.country %></td> -->
+                <!-- <td><%=shipper.zipcode %></td> -->
                 <td><%=shipper.accountNo %></td>
-                <td><%=shipper.type %></td>
-                <td><%=shipper.isExternal %></td>
-                <td><%=shipper.tranVersion %></td>
-                <td><%=shipper.departurePortId %></td>
+                <!-- <td><%=shipper.type %></td> -->
+                <!-- <td><%=shipper.isExternal %></td> -->
+                <!-- <td><%=shipper.tranVersion %></td> -->
+                <!-- <td><%=shipper.departurePortId %></td> -->
                 <td>
                   <a href='manage/<%=shipper.id%>/get'><i class="fas fa-pen"></i></a>
                   <a href='#' class='rm-shipper ml-3' data-id='<%=shipper.id%>'><i class="fas fa-trash"></i></a>
