--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -21,7 +21,7 @@
               <div class="form-group form-show-validation row">
                 <label for="pmb" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">PMB </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000" readonly>
+                  <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" value="9000">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
