--- a/views/pages/admin/customers/edit.ejs
+++ b/views/pages/admin/customers/edit.ejs
@@ -13,7 +13,7 @@
               <span class="required-label">*</span></label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" required
-                value="<%=customer.pmb%>" <% if(customer.companyId.includes('9to5')) { %> readonly <% } %>>
+                value="<%=customer.pmb%>">
             </div>
           </div>
           <div class="form-group form-show-validation row">
