--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -210,8 +210,14 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/shipper/')) { %> active <% } %>">
 					<a href="/warehouse/shipper/list">
-						<i class="fa fa-users"></i>
+						<i class="fa fa-shipping-fast"></i>
 						<p>Shippers </p>
+					</a>
+				</li>
+				<li class="nav-item <% if (page.includes('/carrier/')) { %> active <% } %>">
+					<a href="/warehouse/carrier/list">
+						<i class="fa fa-people-carry"></i>
+						<p>Carriers </p>
 					</a>
 				</li>
 				<% } %>
