--- a/views/pages/warehouse/shipper/create.ejs
+++ b/views/pages/warehouse/shipper/create.ejs
@@ -15,14 +15,11 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
-            <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">First Name</label>
-            <div class="col-lg-4 col-md-9 col-sm-8">
+            <label for="firstName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Contact Name</label>
+            <div class="col-lg-2 col-md-9 col-sm-8">
               <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
             </div>
-          </div>
-          <div class="form-group form-show-validation row">
-            <label for="lastName" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Last Name</label>
-            <div class="col-lg-4 col-md-9 col-sm-8">
+            <div class="col-lg-2 col-md-9 col-sm-8">
               <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
             </div>
           </div>
@@ -68,24 +65,6 @@
               <input type="text" class="form-control" id='zipcode' name="zipcode" placeholder="Zip Code">
             </div>
           </div>
-          <div class="form-group form-show-validation row">
-            <label for="accountNo" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Account Number</label>
-            <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id='accountNo' name="accountNo" placeholder="Account Number">
-            </div>
-          </div>
-          <div class="form-group form-show-validation row">
-            <label for="type" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Shipper Type</label>
-            <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id='type' name="type" placeholder="Type">
-            </div>
-          </div>
-          <div class="form-group form-show-validation row">
-            <label for="tranVersion" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Tran Version</label>
-            <div class="col-lg-4 col-md-9 col-sm-8">
-              <input type="text" class="form-control" id='tranVersion' name="tranVersion" placeholder="Tran Version">
-            </div>
-          </div>
         </div>
         <div class="card-action">
           <button type="submit" class="btn btn-primary">Create</button>
@@ -96,4 +75,5 @@
   </div>
 </form>
 
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/shipper/create.js"></script>')%>
