--- a/views/pages/admin/customers/create.ejs
+++ b/views/pages/admin/customers/create.ejs
@@ -34,8 +34,7 @@
               <div class="form-group form-show-validation row">
                 <label for="lastName" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Last Name </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name"
-                    required>
+                  <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
@@ -69,7 +68,7 @@
               <div class="form-group form-show-validation row">
                 <label for="location" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Select Location </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
-                  <select id="location" name="location" class=" form-control " required>
+                  <select id="location" name="location" class=" form-control ">
                     <% locations.forEach(location => { %>
                     <option value='<%=location.id%>'><%=location.name%></option>
                     <% }) %>
@@ -81,31 +80,31 @@
               <div class="form-group form-show-validation row">
                 <label for="address" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Address </label>
                 <div class="col-lg-7 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="address" name="address" placeholder="Address" required>
+                  <input type="text" class="form-control" id="address" name="address" placeholder="Address">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="city" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">City </label>
                 <div class="col-lg-7 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
+                  <input type="text" class="form-control" id="city" name="city" placeholder="City">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="state" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">State </label>
                 <div class="col-lg-7 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="state" name="state" placeholder="State" required>
+                  <input type="text" class="form-control" id="state" name="state" placeholder="State">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="country" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Country </label>
                 <div class="col-lg-7 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="country" name="country" placeholder="Country" required>
+                  <input type="text" class="form-control" id="country" name="country" placeholder="Country">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
                 <label for="zipcode" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Zipcode </label>
                 <div class="col-lg-7 col-md-8 col-sm-8">
-                  <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="Zipcode" required>
+                  <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="Zipcode">
                 </div>
               </div>
               <div class="form-group form-show-validation row">
