--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -99,11 +99,11 @@
 									<span class="sub-item">No Docs</span>
 								</a>
 							</li>
-							<!-- <li <% if (page.includes('/fll/awb/list')) { %> class="active" <% } %>>
+							<li <% if (page.includes('/fll/awb/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/awb/list">
 									<span class="sub-item">AirWay Bills</span>
 								</a>
-							</li> -->
+							</li>
 							<li <% if (page.includes('/fll/package/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/package/list">
 									<span class="sub-item">Packages on Hands</span>
